# sGBE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_opcodes.py
include/: cpu.hpp  joypad.hpp  memory.hpp  memory.hpp~  opcodes.hpp  ppu.hpp  view.hpp
src/: CMakeLists.txt  clock.cpp  cpu.cpp  main.cpp  main.cpp.old  main.cpp~  main_gui.cpp  memory.cpp  opcodes.cpp  ppu.cpp  view.cpp
test/: test_blargg.py
